--- a/components/Tabs.xaml
+++ b/components/Tabs.xaml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<TabbedPage BackgroundColor="Lime"
+<TabbedPage BackgroundColor="WhiteSmoke"
             Title="Aeonix"
-            BarBackgroundColor="Lime"
             xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             x:Class="LinphoneXamarin.components.Tabs"
             xmlns:pages="clr-namespace:LinphoneXamarin.components">
     <pages:Favorites Icon="icon.png" />
-    <pages:DialPad />
-    <pages:MainPage />
-    <pages:Messages />
+    <pages:DialPad Icon="icon.png" />
+    <pages:MainPage Icon="icon.png" />
+    <pages:Messages Icon="icon.png" />
 </TabbedPage>
