--- a/components/Login.xaml
+++ b/components/Login.xaml
@@ -7,9 +7,9 @@
                  HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="15">
         <Label Text="Welcome to Linphone Xamarin!" HorizontalOptions="Center" />
         <StackLayout x:Name="stack_registrar">
-            <Entry x:Name="username" Placeholder="Username" Text="2006" />
-            <Entry x:Name="password" Placeholder="Password" IsPassword="true" Text="Aeonix123+" />
-            <Entry x:Name="domain" Placeholder="Domain" Text="172.28.11.141" />
+            <Entry x:Name="username" Placeholder="Username" />
+            <Entry x:Name="password" Placeholder="Password" IsPassword="true"  />
+            <Entry x:Name="domain" Placeholder="Domain"  />
             <Button x:Name="register" Text="Register" Clicked="OnRegisterClicked" HorizontalOptions="Center" />
             <Label x:Name="registration_status" HorizontalOptions="Center" />
         </StackLayout>
