--- a/components/Login.xaml
+++ b/components/Login.xaml
@@ -4,14 +4,14 @@
              Title="Login"
              x:Class="LinphoneXamarin.components.Login">
     <StackLayout x:Name="stack_layout" VerticalOptions="FillAndExpand"
-                 HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="15">
-        <Label Text="Welcome to Linphone Xamarin!" HorizontalOptions="Center" />
-        <StackLayout x:Name="stack_registrar">
-            <Entry x:Name="username" Placeholder="Username" />
-            <Entry x:Name="password" Placeholder="Password" IsPassword="true"  />
-            <Entry x:Name="domain" Placeholder="Domain"  />
+                 HorizontalOptions="FillAndExpand" Orientation="Vertical"  Spacing="15">
+        <Label Margin="10" Text="Welcome to Aeonix Touch !" FontSize="Large" TextColor="Black" HorizontalOptions="Center" />
+        <StackLayout VerticalOptions="Center" x:Name="stack_registrar">
+            <Entry Margin="10" x:Name="username" Placeholder="Username" />
+            <Entry Margin="10" x:Name="password" Placeholder="Password" IsPassword="true"  />
+            <Entry Margin="10" x:Name="domain" Placeholder="Address"  />
             <Button x:Name="register" Text="Register" Clicked="OnRegisterClicked" HorizontalOptions="Center" />
-            <Button x:Name="register2" Text="Register2" Clicked="OnRegisterClicked2" HorizontalOptions="Center" />
+            <Button BackgroundColor="#00688f" BorderRadius="25" x:Name="register2" Text="Login" Clicked="OnRegisterClicked2" HorizontalOptions="Center" />
             <Button x:Name="Send" Text="send" IsVisible="False" Clicked="OnsendRequest" HorizontalOptions="Center" />
             <Label x:Name="registration_status" HorizontalOptions="Center" />
         </StackLayout>
