--- a/components/Tabs.xaml
+++ b/components/Tabs.xaml
@@ -5,7 +5,7 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             x:Class="LinphoneXamarin.components.Tabs"
             xmlns:pages="clr-namespace:LinphoneXamarin.components">
-    <pages:Favorites Icon="contact.png" />
+    <pages:ContactTabbedPage Icon="contact.png" />
     <pages:DialPad Icon="dialpad.png" />
     <pages:Messages Icon="chat.png" />
     <pages:MainPage Icon="voicemail.png" />
