--- a/components/DialPad.xaml
+++ b/components/DialPad.xaml
@@ -15,8 +15,8 @@
             <Style x:Key="greenButton" TargetType="Button">
                 <Setter Property="BackgroundColor" Value="Green" />
                 <Setter Property="TextColor" Value="White" />
-                <Setter Property="BorderRadius" Value="25" />
-                <Setter Property="FontSize" Value="Small" />
+                <Setter Property="BorderRadius" Value="0" />
+                <Setter Property="FontSize" Value="Medium" />
             </Style>
             <Style x:Key="blueButton" TargetType="Button">
                 <Setter Property="BackgroundColor" Value="#00688f" />
@@ -27,7 +27,7 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+        <StackLayout Orientation="Vertical" VerticalOptions="End" HorizontalOptions="FillAndExpand">
             <StackLayout Padding="10 " BackgroundColor="White" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                 <Label YAlign="Center" HorizontalOptions="StartAndExpand" Text="{Binding}" />
                 <Button Clicked="clear" Text="&#xf55a;" BorderColor="Transparent" BackgroundColor="Transparent" TextColor="DimGray" FontSize="Medium">
@@ -37,9 +37,9 @@
                 </Button>
                 <!--<Button  Text="Clear" HorizontalOptions="End" Clicked="clear" />-->
             </StackLayout>
-            <Grid VerticalOptions="End" x:Name="controlGrid" RowSpacing="1" ColumnSpacing="1">
+            <Grid  x:Name="controlGrid" RowSpacing="1" ColumnSpacing="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="150" />
+                    <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
@@ -50,20 +50,24 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Label Text="0" Grid.Row="0" HorizontalTextAlignment="End" VerticalTextAlignment="End" TextColor="White" Grid.ColumnSpan="2" />
-                <Button Clicked="onDialPadClicked" Text="1" Grid.Row="1" Grid.Column="0" Style="{StaticResource plainButton}" />
-                <Button Clicked="onDialPadClicked" Text="2" Grid.Row="1" Grid.Column="1" Style="{StaticResource blueButton}" />
-                <Button Clicked="onDialPadClicked" Text="3" Grid.Row="1" Grid.Column="2" Style="{StaticResource plainButton}" />
-                <Button Clicked="onDialPadClicked" Text="4" Grid.Row="2" Grid.Column="0" Style="{StaticResource plainButton}" />
-                <Button Clicked="onDialPadClicked" Text="5" Grid.Row="2" Grid.Column="1" Style="{StaticResource blueButton}" />
-                <Button Clicked="onDialPadClicked" Text="6" Grid.Row="2" Grid.Column="2" Style="{StaticResource plainButton}" />
-                <Button Clicked="onDialPadClicked" Text="7" Grid.Row="3" Grid.Column="0" Style="{StaticResource plainButton}" />
-                <Button Clicked="onDialPadClicked" Text="8" Grid.Row="3" Grid.Column="1" Style="{StaticResource blueButton}" />
-                <Button Clicked="onDialPadClicked" Text="9" Grid.Row="3" Grid.Column="2" Style="{StaticResource plainButton}" />
-                <Button Clicked="onDialPadClicked" Text="*" Grid.Row="4" Grid.Column="0" Style="{StaticResource plainButton}" />
-                <Button Clicked="onDialPadClicked" Text="0" Grid.Row="4" Grid.Column="1" Style="{StaticResource blueButton}" />
-                <Button Clicked="onDialPadClicked" Text="#" Grid.Row="4" Grid.Column="2" Style="{StaticResource plainButton}" />
-                <Button Clicked="OnCallClicked" Text="call" Grid.ColumnSpan="3" Grid.Row="5" Grid.Column="0" Style="{StaticResource greenButton}" />
+                
+                <Button Clicked="onDialPadClicked" Text="1" Grid.Row="0" Grid.Column="0" Style="{StaticResource plainButton}" />
+                <Button Clicked="onDialPadClicked" Text="2" Grid.Row="0" Grid.Column="1" Style="{StaticResource blueButton}" />
+                <Button Clicked="onDialPadClicked" Text="3" Grid.Row="0" Grid.Column="2" Style="{StaticResource plainButton}" />
+                <Button Clicked="onDialPadClicked" Text="4" Grid.Row="1" Grid.Column="0" Style="{StaticResource plainButton}" />
+                <Button Clicked="onDialPadClicked" Text="5" Grid.Row="1" Grid.Column="1" Style="{StaticResource blueButton}" />
+                <Button Clicked="onDialPadClicked" Text="6" Grid.Row="1" Grid.Column="2" Style="{StaticResource plainButton}" />
+                <Button Clicked="onDialPadClicked" Text="7" Grid.Row="2" Grid.Column="0" Style="{StaticResource plainButton}" />
+                <Button Clicked="onDialPadClicked" Text="8" Grid.Row="2" Grid.Column="1" Style="{StaticResource blueButton}" />
+                <Button Clicked="onDialPadClicked" Text="9" Grid.Row="2" Grid.Column="2" Style="{StaticResource plainButton}" />
+                <Button Clicked="onDialPadClicked" Text="*" Grid.Row="3" Grid.Column="0" Style="{StaticResource plainButton}" />
+                <Button Clicked="onDialPadClicked" Text="0" Grid.Row="3" Grid.Column="1" Style="{StaticResource blueButton}" />
+                <Button Clicked="onDialPadClicked" Text="#" Grid.Row="3" Grid.Column="2" Style="{StaticResource plainButton}" />
+                <Button Clicked="OnCallClicked" Text="&#xf095;" Grid.ColumnSpan="3" Grid.Row="4" Grid.Column="0" Style="{StaticResource greenButton}" >
+                    <Button.FontFamily>
+                        <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
+                    </Button.FontFamily>
+                </Button>
             </Grid>
         </StackLayout>
     </ContentPage.Content>
