--- a/components/userControllers/ContactCell.xaml
+++ b/components/userControllers/ContactCell.xaml
@@ -15,7 +15,7 @@
                         <OnPlatform x:TypeArguments="x:String" Android="fa-regular-400.ttf#Font Awesome 5 Free Regular" iOS="Font Awesome 5 Free" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
                     </Button.FontFamily>
                 </Button>
-                <Button  Clicked="onCallClicked" Text="&#xf10b;" BorderColor="Transparent" HorizontalOptions="Fill" BackgroundColor="Transparent" TextColor="DimGray" FontSize="Medium">
+                <Button  Clicked="onCallClicked" Text="&#xf095;" BorderColor="Transparent" HorizontalOptions="Fill" BackgroundColor="Transparent" TextColor="DimGray" FontSize="Medium">
                     <Button.FontFamily>
                         <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
                     </Button.FontFamily>
