--- a/components/Login.xaml
+++ b/components/Login.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              Title="Login"
              x:Class="LinphoneXamarin.components.Login">
-    <StackLayout x:Name="stack_layout" VerticalOptions="Center"
+    <StackLayout x:Name="stack_layout" VerticalOptions="FillAndExpand"
                  HorizontalOptions="FillAndExpand" Orientation="Vertical"  Spacing="15">
         <Label Margin="10" Text="Welcome to Aeonix Touch !" FontSize="Large" TextColor="Black" HorizontalOptions="Center" />
         <StackLayout VerticalOptions="Center" x:Name="stack_registrar">
