--- a/components/MainPage.xaml
+++ b/components/MainPage.xaml
@@ -22,41 +22,43 @@
 
         <Grid Margin="20" VerticalOptions="End" x:Name="controlGrid" RowSpacing="3" ColumnSpacing="3">
             <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
+                <RowDefinition Height="40" />
                 <RowDefinition Height="*" />
+              
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Button x:Name="Answer"  Clicked="OnAnswerClicked" Grid.Row="0" Grid.Column="0" Text="&#xf095;" BorderColor="Transparent" BackgroundColor="Green" TextColor="White" FontSize="Medium" >
-                <Button.FontFamily>
-                    <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
-                </Button.FontFamily>
-            </Button>
-            <Button x:Name="Terminate"  Clicked="OnTerminateClicked" Grid.Row="0" Grid.Column="1" Text="&#xf3dd;" BorderColor="Transparent" BackgroundColor="Red" TextColor="White" FontSize="Medium">
-                <Button.FontFamily>
-                    <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
-                </Button.FontFamily>
-            </Button>
-                <Button x:Name="hold"  Clicked="OnHoldClicked" Grid.Column="2" Text="&#xf28b;" BorderColor="Transparent" BackgroundColor="Transparent" TextColor="DimGray" FontSize="Medium"  >
-                <Button.FontFamily>
-                    <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
-                </Button.FontFamily>
-            </Button>
-            <Button  Clicked="onConferenceCalls" Grid.Row="1" Grid.Column="0" Text="&#xf55a;" BorderColor="Transparent" BackgroundColor="Transparent" TextColor="DimGray" FontSize="Medium" >
-                <Button.FontFamily>
-                    <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
-                </Button.FontFamily>
-            </Button>
-            <Button  Clicked="onToggleSpeakerAsync" Grid.Row="1" Grid.Column="1" Text="&#xf028;" BorderColor="Transparent" BackgroundColor="Transparent" TextColor="DimGray" FontSize="Medium"  >
-                <Button.FontFamily>
-                    <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
-                </Button.FontFamily>
-            </Button>
 
+            <Button x:Name="hold"  Clicked="OnHoldClicked" Grid.Row="0" Grid.Column="0" Text="&#xf28b;" BorderColor="Transparent" BackgroundColor="Transparent" TextColor="DimGray" FontSize="Medium"  >
+                <Button.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
+                </Button.FontFamily>
+            </Button>
+            <Button  Clicked="onConferenceCalls" Grid.Row="0" Grid.Column="1" Text="&#xf55a;" BorderColor="Transparent" BackgroundColor="Transparent" TextColor="DimGray" FontSize="Medium" >
+                <Button.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
+                </Button.FontFamily>
+            </Button>
+            <Button  Clicked="onToggleSpeakerAsync" Grid.Row="0" Grid.Column="2" Text="&#xf028;" BorderColor="Transparent" BackgroundColor="Transparent" TextColor="DimGray" FontSize="Medium"  >
+                <Button.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
+                </Button.FontFamily>
+            </Button>
+            <Button x:Name="Answer"  Clicked="OnAnswerClicked" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"   Text="&#xf095;" BorderColor="Transparent" BackgroundColor="Green" TextColor="White" FontSize="Medium" >
+                <Button.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
+                </Button.FontFamily>
+            </Button>
+            <Button x:Name="Terminate"  Clicked="OnTerminateClicked" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2"  Text="&#xf3dd;" BorderColor="Transparent" BackgroundColor="Red" TextColor="White" FontSize="Medium">
+                <Button.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String" Android="fa-solid-900.ttf#Font Awesome 5 Free Regular" iOS="FontAwesome5FreeSolid" WinPhone="Assets/fa-regular-400.ttf#Font Awesome 5 Free" />
+                </Button.FontFamily>
+            </Button>
         </Grid>
     </StackLayout>
 </ContentPage>
